--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 [~][$]*
-/code/mongodb/**
+/code/mongodb/data/*
+!/code/mongodb/data/git.keep
+/code/mongodb/logs/*
+/code/mongodb/logs/git.keep
 [~]*
 /code/dist/*
