--- a/code/spring_batch/spring_batch_demo/src/main/resources/bootstrap.yml
+++ b/code/spring_batch/spring_batch_demo/src/main/resources/bootstrap.yml
@@ -1,10 +1,6 @@
-server:
-  port: 8000
-spring:
- application:
-    name: SPRING_BATCH_DEMO
- config:
-    name: SPRING_BATCH_DEMO
-    use-legacy-processing: true
- profiles:
-    active: mysql
+server.port: 8000
+spring.application.name: SPRING_BATCH_DEMO
+spring.config.name: SPRING_BATCH_DEMO
+spring.config.use-legacy-processing: true
+spring.profiles.active: mysql
+spring.batch.job.enabled: false
