--- a/code/spring_batch/spring_batch_demo/src/main/resources/SPRING_BATCH_DEMO-mysql.yaml
+++ b/code/spring_batch/spring_batch_demo/src/main/resources/SPRING_BATCH_DEMO-mysql.yaml
@@ -1,8 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_batch
+    jdbc-url: jdbc:mysql://localhost:3306/spring_batch
     username: root
     password: Abhishek@1009
+  university:
+    datasource:
+      jdbc-url: jdbc:mysql://localhost:3306/university
+      username: root
+      password: Abhishek@1009
   batch:
     jdbc:
       initialize-schema: always
