--- a/code/spring_batch/spring_batch_demo/src/main/resources/bootstrap.yml
+++ b/code/spring_batch/spring_batch_demo/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ server.port: 8001
 spring.application.name: SPRING_BATCH_DEMO
 spring.config.name: SPRING_BATCH_DEMO
 spring.config.use-legacy-processing: true
-spring.profiles.active: mysql
+spring.profiles.active: batch_configuration,mysql,postgres
 
 #spring.batch.job.enabled: false
