--- a/code/spring_batch/spring_batch_demo/pom.xml
+++ b/code/spring_batch/spring_batch_demo/pom.xml
@@ -69,7 +69,13 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency> 
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
 		
 		<!-- Test dependencies -->
 		<dependency>
