--- a/code/spring_batch/spring_batch_demo/src/main/resources/SPRING_BATCH_DEMO-postgres.yaml
+++ b/code/spring_batch/spring_batch_demo/src/main/resources/SPRING_BATCH_DEMO-postgres.yaml
@@ -2,5 +2,5 @@ spring:
   postgres:
     datasource:
       jdbc-url: jdbc:postgresql://localhost:5432/university
-      username: root
+      username: postgres
       password: root
