--- a/kubernetes/configmap/nginx-pod-with-configmap.yaml
+++ b/kubernetes/configmap/nginx-pod-with-configmap.yaml
@@ -9,10 +9,6 @@ spec:
   containers:
     - name: nginx
       image: nginx
-      resources:
-      requests:
-        memory: "64Mi"
-        cpu: "250m"
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
+      envFrom:
+        - configMapRef:
+            name: nginx-configmap
